# wm2000

./: .envrc  .flake8  .gitignore  Makefile  README.md  pyproject.toml
scripts/: compile-ui-files.py
src/wm2000/: main.py
src/wm2000/gui/: __init__.py  main_window.py  main_window.ui  pages_index.py  pages_index.ui
src/wm2000/persistence/: __init__.py  schema.sql
