[tool.poetry]
name = "wm2000"
version = "0.1.0"
description = ""
authors = ["Nhan <hi@imnhan.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
pyside6 = "^6.7.0"

[tool.poetry.scripts]
wm2k = "wm2000.main:main"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
