[tool.poetry]
name = "wm2000"
version = "0.1.0"
description = ""
authors = ["Nhan <hi@imnhan.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
pyside6 = "^6.7.0"

[tool.poetry.scripts]
wm2k = "wm2000.main:main"

[tool.poetry.group.dev.dependencies]
ipdb = "^0.13.13"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
exclude = ["src/wm2000/gui/*.py"]
src = ["src"]

[tool.ruff.lint]
extend-select = ["I"]  # also format import statements
